apps/nginx-avi/02.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    ako.vmware.com/enable-tls: "true"
  namespace: nginx-avi
spec:
  ingressClassName: avi-lb
  rules:
  - host: nginx.my.domain
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              name: http
        path: /
        pathType: Prefix
